@@ -615,7 +615,10 @@ module Rails
       end
 
       def default_load_paths
-        paths = ["#{root_path}/test/mocks/#{environment}"]
+        paths = []
+        
+        # Add the old mock paths only if the directories exists
+        paths.concat(Dir["#{root_path}/test/mocks/#{environment}"]) if File.exists?("#{root_path}/test/mocks/#{environment}")
 
         # Add the app's controller directory
         paths.concat(Dir["#{root_path}/app/controllers/"])
